# modelzoo

./: .gitignore  .pre-commit-config.yaml  README.adoc  VERSIONS.yaml  pyproject.toml  setup.cfg  start_container.sh
.circleci/: VERSIONS.yaml  config.yml
.circleci/assets/: versions_schema.json
.github/: CODEOWNERS  CONTRIBUTING.rst  pull_request_template.md  release-drafter.yml
.github/workflows/: release-drafter.yml  stale.yml
docs/: container-setup.adoc
examples/nlp/: README.adoc  requirements.txt
examples/nlp/text_generation/: README.adoc  cpu_generate_text.py  model_session.py  rdu_generate_text.py
examples/nlp/text_generation/config/: base_config_cpu.yaml  base_config_rdu.yaml  o1hd_config.json  o1hd_config_rdu.yaml  schema.py
examples/nlp/text_generation/utils/: reporting.py
examples/nlp/training/: README.adoc  cpu_train_llm.py  rdu_train_llm.py  rdu_train_llm_dp.py
examples/nlp/training/config/: base_config_cpu.yaml  base_config_rdu.yaml  base_config_rdu_dp.yaml  schema.py
requirements/: requirements.txt
sambanova_modelzoo/libs/: __init__.py
sambanova_modelzoo/libs/common/: arguments.py  common_schema.py  generation_test_schema.py  pef_meta.py  pretrained_model_schema.py  samba_schema.py
sambanova_modelzoo/models/: README.adoc  __init__.py  config.py  configuration_transformer.py  configuration_validator.py  custom_ops.py  custom_samba_ops.py  directives.py  hyperfunction_for_causal_lm.py  lazy_init.py  model_loader.py  modeling_patch_utils.py  modeling_utils.py  module_import_tool.py  patch_router.py  register.py  schema.py  utils.py
sambanova_modelzoo/models/gemma/: README.adoc  __register__.py  __register_samba__.py  configuration_gemma.py  modeling_gemma.py  patch_gemma.py  plugins_gemma.py  requirements_gemma.py  trace_gemma.py
sambanova_modelzoo/models/llama/: README.adoc  __register__.py  __register_samba__.py  configuration_llama.py  modeling_llama.py  patch_llama.py  plugins_llama.py  trace_llama.py
sambanova_modelzoo/models/mistral/: README.adoc  __register__.py  __register_samba__.py  configuration_mistral.py  modeling_mistral.py  patch_mistral.py  plugins_mistral.py  requirements_mistral.py  trace_mistral.py
sambanova_modelzoo/pipelines/: __init__.py  base.py  text_generation.py
(+28 files in other folders)
